# qtmodernredux

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README_pypi.md  TODO  requirements.txt  setup.cfg  setup.py
resources/: resources.qrc
src/examples/: LICENSE  requirements.txt
src/examples/customstyle/: main.py  mainwindow.ui  mainwindow_ui.py
src/examples/customstyle/wow_style/: __init__.py  style.py
src/examples/native_titlebar/: main.py  mainwindow.ui  mainwindow_ui.py
src/examples/pyplayer/: main.py
src/examples/qdialogs/: main.py  mainwindow_ui.py
src/examples/qmovie/: main.py
src/examples/qvideo/: main.py
src/examples/splitters/: main.py  mainwindow.ui  mainwindow_ui.py
src/examples/titlebar_1/: main.py  mainwindow.ui  mainwindow_ui.py
src/examples/titlebar_2/: main.py  mainwindow.ui  mainwindow_ui.py
src/examples/widgetgallery/: main.py
src/qtmodernredux/: __init__.py  qtmodernredux.py
src/qtmodernredux/apl_style/: __init__.py  style.py
src/qtmodernredux/apl_style/widgetstyle/: __init__.py  checkbox.py  combobox.py  headerview.py  progressbar.py  pushbutton.py  radiobutton.py  scrollarea.py  scrollbar.py  slider.py  spinbox.py  tableview.py  tabwidget_titlebar.py  toolbar.py
src/qtmodernredux/windowstyle/: modernwindow.py  tabfilter.py  windowframe.py  windowresizer.py  windowtitlelabel.py
src/qtmodernredux6/: qtmodernredux.py
src/qtmodernredux6/apl_style/: __init__.py  style.py
src/qtmodernredux6/windowstyle/: modernwindow.py  tabfilter.py  windowframe.py  windowresizer.py  windowtitlelabel.py
(+39 files in other folders)
