[metadata]
name = QtModernRedux
version = 0.9.8
author = Robert Kist
author_email = kr@robertkist.com
description = a modern UI style for Python 3.x / PySide2 applications
long_description = file: README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/robertkist/qtmodernredux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
license_files = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    PySide2>=5.15.2
python_requires=
    >=3.8

[options.packages.find]
where=src
include=
    qtmodernredux
    qtmodernredux.*
