[metadata]
name = QtModernRedux
version = 0.9.11
author = Robert Kist
author_email = kr@robertkist.com
description = a modern UI style for Python 3.x / PySide2 applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robertkist/qtmodernredux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
license_files = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    PySide2>=5.15.2
python_requires=
    >=3.9.4

[options.packages.find]
where=src
include=
    qtmodernredux
    qtmodernredux.*
    README_pypi.md
